--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta name="twitter:description" content="Providing professional esports production solutions since 2023." />
     <meta name="twitter:image"  content="dashpreview.png" />
 
+    <!-- fontawesome brand icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/brands.min.css" integrity="sha512-7rXIvd/xj1FnI2zKQjjXzDFxC4twqBByp8yxOgEQJs4C/aNzNyoQsOO7VxH0RgYNhbAYLJLwzqslaP50KTTHIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Esports DashBoard - GitProductions</title>
   </head>
