footer changes with twitter follow link

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Esports Dashboard" />
     <meta name="twitter:description" content="Providing professional esports production solutions since 2023." />
-    <meta name="twitter:image"  content="dashpreview.png" />
+    <meta name="twitter:image"  content="/images/3.png" />
 
-    <!-- fontawesome brand icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/brands.min.css" integrity="sha512-7rXIvd/xj1FnI2zKQjjXzDFxC4twqBByp8yxOgEQJs4C/aNzNyoQsOO7VxH0RgYNhbAYLJLwzqslaP50KTTHIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/brands.min.css" integrity="sha512-7rXIvd/xj1FnI2zKQjjXzDFxC4twqBByp8yxOgEQJs4C/aNzNyoQsOO7VxH0RgYNhbAYLJLwzqslaP50KTTHIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <title>Esports DashBoard - GitProductions</title>
   </head>
