--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Providing professional esports production solutions since 2024." />
     <meta property="og:image" content="/images/3.png" />
     <meta property="og:url" content="https://gitproductions.github.io/EsportsDash-GameConfigCreator/" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="/images/3.png" />
     <meta name="twitter:title" content="Esports Dashboard" />
     <meta name="twitter:description" content="Providing professional esports production solutions since 2023." />
     <meta name="twitter:image"  content="/images/3.png" />
