--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta property="og:title" content="Esports Dashboard" />
     <meta property="og:description" content="Providing professional esports production solutions since 2024." />
-    <meta property="og:image" content="/images/3.png" />
+    <meta property="og:image" content="images/3.png" />
     <meta property="og:url" content="https://gitproductions.github.io/EsportsDash-GameConfigCreator/" />
-    <meta name="twitter:card" content="/images/3.png" />
+    <meta name="twitter:card" content="images/3.png" />
     <meta name="twitter:title" content="Esports Dashboard" />
     <meta name="twitter:description" content="Providing professional esports production solutions since 2023." />
-    <meta name="twitter:image"  content="/images/3.png" />
+    <meta name="twitter:image"  content="images/3.png" />
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/brands.min.css" integrity="sha512-7rXIvd/xj1FnI2zKQjjXzDFxC4twqBByp8yxOgEQJs4C/aNzNyoQsOO7VxH0RgYNhbAYLJLwzqslaP50KTTHIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
