--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="icon.png" />
+    <link rel="icon" type="image/svg+xml" href="https://gitproductions.github.io/EsportsDash-GameConfigCreator/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta property="og:title" content="Esports Dashboard" />
