--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:description" content="Providing professional esports production solutions since 2024." />
     <meta property="og:image" content="https://gitproductions.github.io/EsportsDash-GameConfigCreator/images/3.png" />
     <meta property="og:url" content="https://gitproductions.github.io/EsportsDash-GameConfigCreator/" />
+    <meta property="og:type" content="website" />
+
     <meta name="twitter:card" content="https://gitproductions.github.io/EsportsDash-GameConfigCreator/images/3.png" />
     <meta name="twitter:title" content="Esports Dashboard" />
     <meta name="twitter:description" content="Providing professional esports production solutions since 2023." />
