--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://gitproductions.github.io/EsportsDash-GameConfigCreator/" />
     <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="https://gitproductions.github.io/EsportsDash-GameConfigCreator/images/3.png" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Esports Dashboard" />
     <meta name="twitter:description" content="Providing professional esports production solutions since 2023." />
     <meta name="twitter:image"  content="https://gitproductions.github.io/EsportsDash-GameConfigCreator/images/3.png" />
