--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/brands.min.css" integrity="sha512-7rXIvd/xj1FnI2zKQjjXzDFxC4twqBByp8yxOgEQJs4C/aNzNyoQsOO7VxH0RgYNhbAYLJLwzqslaP50KTTHIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+    <!-- Testing amplitiude -->
+    <script src="https://cdn.amplitude.com/script/940862db664ede5e4324a721b211a3bf.js"></script><script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('940862db664ede5e4324a721b211a3bf', {"fetchRemoteConfig":true,"autocapture":true});</script>
+
     <title>Esports DashBoard - GitProductions</title>
   </head>
   <body>
