--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
     <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <!-- Testing amplitiude -->
-    <script src="https://cdn.amplitude.com/script/940862db664ede5e4324a721b211a3bf.js"></script><script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('940862db664ede5e4324a721b211a3bf', {"fetchRemoteConfig":true,"autocapture":true});</script>
-
+    <script src="https://cdn.amplitude.com/script/940862db664ede5e4324a721b211a3bf.js"></script>
+    <script>
+      window.onload = function() {
+        if (window.amplitude && window.sessionReplay) {
+          window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));
+          window.amplitude.init('940862db664ede5e4324a721b211a3bf', {"fetchRemoteConfig":true,"autocapture":true});
+        }
+      };
+    </script>
     <title>Esports DashBoard - GitProductions</title>
   </head>
   <body>
